Sun Jan 23 10:52:34 2000  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: Synced with Linux 2.3.40.

	* Released as version 2.1.4.

Thu Jan 20 11:08:32 2000  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (scan_device): Fixed bug in reading of cardbus extensions.

	* lib/proc.c: pread/pwrite fixed again, this time on libc5 :(

	* lspci.c (format_agp_rate): Better formatting of AGP rates.

	* pci.ids: New ID's.

	* lib/configure: Added configuration for ia64 (the same as for Alpha).
	Patch from Stephane Eranian <eranian@cello.hpl.hp.com>.

Thu Jan 13 23:01:52 2000  Martin Mares  <mj@albireo.ucw.cz>

	* Released as version 2.1.3.

	* pci.ids: New ID's.

	* lspci.c: Alpha IO_FORMAT fix by Andrea Arcangeli.

	* lib/access.c: Corrected order of access methods -- it's wonderful how
	long could such a bug remain unspotted. Thanks go to Andreas Schockenhoff.

Sat Dec 11 23:34:48 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Released as version 2.1.2.

	* lib/names.c (pci_lookup_name): Fixed printing of unknown subsystem ID's.

Sat Dec  4 13:11:03 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Released as version 2.1.1.

	* pci.ids: Several new ID's.

	* setpci.c (exec_op): Don't forget to increment address after writing
	single value, so that `30.b=12,34,56,78' works as expected. Reported
	by Petr Soucek <petr@ryston.cz>.

Wed Nov  3 10:24:38 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_terse): If prog-if is zero, but it's present in the
	ID list, show it.

Sat Oct 30 11:06:35 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Released as version 2.1.

	* pci.ids: Synced to devlist.h in 2.3.24 kernel. Merged in
	lots of contributed entries.

Thu Oct 14 10:40:12 1999  Dave Jones    <dave@powertweak.com>

	* pci.ids: Added lots of subsystem definitions.

Sat Oct  9 14:32:28 1999  Martin Mares  <mj@albireo.ucw.cz>

	* setpci.man: Better example.

	* lspci.c: Resolve prog-if names.

	* lib/names.c: Adapted to new pci.ids syntax.
