@@ -1,6 +1,6 @@
-# $Id: Makefile,v 1.29 2000/01/23 05:57:04 mj Exp $
+# $Id: Makefile,v 1.30 2000/01/24 15:37:13 mj Exp $
 # Makefile for Linux PCI Utilities
-# (c) 1998--1999 Martin Mares <mj@atrey.karlin.mff.cuni.cz>
+# (c) 1998--2000 Martin Mares <mj@suse.cz>
 
 OPT=-O2 -fomit-frame-pointer
 #OPT=-O2 -g
@@ -18,6 +18,7 @@ else
 ROOT=/
 PREFIX=/usr
 endif
+MANDIR=$(shell if [ -d $(PREFIX)/share/man ] ; then echo $(PREFIX)/share/man ; else echo $(PREFIX)/man ; fi)
 
 export
 
@@ -46,9 +47,10 @@ clean:
 
 install: all
 	# -c is ignored on Linux, but required on FreeBSD
+	install -d -m 755 $(ROOT)/sbin $(PREFIX)/share $(MANDIR)/man8
 	install -c -m 755 -s lspci setpci $(ROOT)/sbin
 	install -c -m 644 pci.ids $(PREFIX)/share
-	install -c -m 644 lspci.8 setpci.8 $(PREFIX)/man/man8
+	install -c -m 644 lspci.8 setpci.8 $(MANDIR)/man8
 	# Remove relics from old versions
 	rm -f $(ROOT)/etc/pci.ids
 
